Fixed package.json file

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "frontend": "npm start --prefix frontend",
     "frontend:build": "npm run build --prefix frontend",
     "backend": "node backend/index.js",
-    "dev": "concurrently \"npm run backend\" \"npm run frontend\""
+    "both": "concurrently \"npm run backend\" \"npm run frontend\"",
+    "install-all": "npm install --prefix frontend && npm install --prefix backend",
+    "install-concurrently": "npm i -L concurrently"
   }
 }
