--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,6 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@easylogic/react-summernote": "^0.1.4",
+    "@easylogic/react-summernote-lite": "^0.1.4",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@lexical/react": "^0.37.0",
+    "@mdxeditor/editor": "^3.47.0",
+    "@remirror/pm": "^3.0.1",
+    "@remirror/react": "^3.0.3",
+    "@remirror/react-editors": "^2.0.3",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
@@ -11,14 +20,22 @@
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
     "fabric": "^6.7.1",
+    "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
+    "lexical": "^0.37.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.0",
     "react-scripts": "5.0.1",
+    "remirror": "^3.0.3",
+    "rm": "^0.1.8",
+    "summernote": "^0.9.1",
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.46.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
+    "@types/react-dom": "^19.2.2",
     "ajv": "^7.2.4"
   },
   "scripts": {
