--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,8 @@
     "@remirror/pm": "^3.0.1",
     "@remirror/react": "^3.0.3",
     "@remirror/react-editors": "^2.0.3",
+    "@remirror/react-ui": "^1.0.3",
+    "@remirror/styles": "^3.0.0",
     "@testing-library/dom": "^10.4.1",
     "@testing-library/jest-dom": "^6.9.1",
     "@testing-library/react": "^16.3.0",
