--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "fabric": "^6.7.1",
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lexical": "^0.37.0",
     "react": "^19.2.0",
     "react-bootstrap": "^2.10.10",
